packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/unknown-ontology-subelement.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Testing ontology component validation, verify
if an unknown ontology sub-element is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types/>
    <concepts/>
    <event-types/>
    <whatever/>
    <sources/>
  </ontology>
</edxml>
